Add trajectory prediction node

--- a/src/leg_detector/CMakeLists.txt
+++ b/src/leg_detector/CMakeLists.txt
@@ -48,12 +48,18 @@ add_executable (detect_leg_clusters
                 )
 ament_target_dependencies(detect_leg_clusters rclcpp leg_detector_msgs OpenCV sensor_msgs tf2 tf2_geometry_msgs tf2_ros visualization_msgs) 
 
+add_executable (trajectory_prediction
+                src/trajectory_prediction.cpp
+                )
+ament_target_dependencies(trajectory_prediction rclcpp leg_detector_msgs visualization_msgs)
+
 add_executable (local_occupancy_grid_mapping
                 src/laser_processor.cpp
                 src/local_occupancy_grid_mapping.cpp
                 include/leg_detector/laser_processor.h
                 )
 ament_target_dependencies(local_occupancy_grid_mapping rclcpp leg_detector_msgs OpenCV sensor_msgs tf2 tf2_ros visualization_msgs nav_msgs tf2_geometry_msgs)
+
 add_executable (inflated_human_scan
                 src/inflated_human_scan.cpp
                 )
@@ -63,6 +69,7 @@ install (TARGETS
   detect_leg_clusters
   local_occupancy_grid_mapping
   inflated_human_scan
+  trajectory_prediction
   DESTINATION lib/${PROJECT_NAME}
 )
 
